<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_feedback_dialog"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ImageView
        android:layout_width="38dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_feedback_logo" />

    <TextView
        android:id="@+id/tv_facebook_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:text="@string/feedback"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_facebook_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:gravity="center_horizontal"
        android:text="@string/feedback_remind_text"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_facebook_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/your_email"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_feedback_input"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tv_facebook_suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/your_suggestion"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_suggestion"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_feedback_input"
        android:gravity="top" />

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="65dp"
        android:layout_height="32dp"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_feedback_submit"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold" />
</LinearLayout>