<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="264dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_rate_us_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_invite_firends_logo" />

    <TextView
        android:id="@+id/tv_invite_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/invite_friends"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_invite_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/invite_remind_text"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/tv_facebook_share"
            android:layout_width="182dp"
            android:layout_height="29dp"
            android:background="@drawable/btn_facebook_share"
            android:gravity="center"
            android:text="@string/share_to_facebook"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_sys_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_sys_share" />
    </LinearLayout>
</LinearLayout>