<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:fitsSystemWindows="true"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_close"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/select_your_zodiac_sign"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="11dp"
            android:src="@drawable/ic_aries_1"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/horoscope"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_image" />

        <TextView
            android:id="@+id/tv_birthday_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/select_your_birthday"
            android:textColor="#C7C7C7"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_analysis" />

        <com.zyyoona7.picker.DatePickerView
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:background="#15000000"
            android:paddingLeft="0dp"
            android:paddingTop="16dp"
            android:paddingRight="0dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_birthday_title" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="230dp"
            android:layout_height="42dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/btn_horoscope_confirm_selector"
            android:gravity="center"
            android:text="@string/get_started_now"
            android:textColor="@drawable/btn_text_selector"
            android:textSize="15sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_picker" />

        <LinearLayout
            android:id="@+id/layout_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center_vertical"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_confirm">

            <CheckBox
                android:id="@+id/cb_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/btn_checkbox_selector"
                android:checked="true"
                android:paddingTop="8dp"
                android:paddingRight="6dp"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_and_accept"
                android:textColor="@android:color/white"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:padding="4dp"
                android:text="@string/privacy_policy"
                android:textColor="@android:color/white"
                android:textSize="11sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>