<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/setting_title"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/bg_setting_shape"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_setting_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:drawableLeft="@drawable/ic_notification"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/notification"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/push_switcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/shape_switch_thumb"
                android:track="@drawable/shape_switch_selector"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_rate_us"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingRight="8dp">

            <TextView
                android:id="@+id/tv_setting_rateUs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:drawableLeft="@drawable/ic_rate_us"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/rate_us"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_invite"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingRight="8dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_setting_inviteFriends"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:drawableLeft="@drawable/ic_invite_friends"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/invite_friends"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/layout_native_ad_container"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.0"
            android:gravity="bottom"
            android:text="Horoscope V1.0.0"
            android:textColor="@color/gray_text_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="58dp"
            android:padding="4dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/gray_text_color"
            android:textSize="11sp" />
    </LinearLayout>
</LinearLayout>