<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_horoscope_header"
        android:orientation="vertical"
        android:paddingBottom="19dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                android:id="@+id/tv_compatibility_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/compatibility"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_me_icon"
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_match_empty" />

                <TextView
                    android:id="@+id/tv_me_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="@string/select"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_match" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_it_icon"
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:src="@drawable/ic_match_empty" />

                <TextView
                    android:id="@+id/tv_it_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="@string/select"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="264dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="17dp"
                android:background="@drawable/btn_check_compatibility"
                android:gravity="center"
                android:text="@string/check_compatibility"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_horoscope"
                android:overScrollMode="never"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="16dp"
                android:scrollbars="none" />

            <FrameLayout
                android:id="@+id/layout_native_ad_container"
                android:layout_width="match_parent"
                android:layout_height="107dp"
                android:layout_marginBottom="32dp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>